--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -122,7 +122,7 @@
 
     <h3>[Page 2] Rivers</h3>
 
-    <img src="images/wrieframe2.jpg" alt="picture of wireframe">
+    <img src="images/wireframe3.JPG" alt="picture of wireframe">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
