--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Travel <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Hobbies  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,7 +125,14 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        This is where the 600 words go I guess.
+      </p>
+      <p>
+      Why will people come to your site?
+      What questions will your visitors expect your site to answer for them?
+      What types of activities will visitors want to complete on your site?
+      What information is necessary to complete any actions your site offers?
+      Why will your visitors come to your site instead of another to get this information or complete the actions?
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
@@ -134,20 +141,20 @@
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Travel
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="#" alt="Photo from out of the country">
+        <img src="#" alt="Local Idaho Trip">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Hobbies
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="#" alt="Gym picture">
+        <img src="#" alt="Picture of food I made">
 
       </ul>
       <hr>
