personalsiteplan part one

--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -124,19 +124,27 @@
         Content
       </h2>
       <h3>Home page</h3>
+      <h2>Why will peoople come to your site?</h2>
       <p>
-        This is where the 600 words go I guess.
+        For this site, I hope that people interested learning more about who I am visit. This entails both about some interesting things about me and to also learn about some of the html and css skills that I have. 
+      </p>
+      <h2>What Questions will visitors expect your site to answer for them?</h2>
+      <p>
+          So as they come to my site, they will see that I am able to structure a webpage in the image that I hope for it both through HTML organization and through spacing strategies within CSS. They should hopefully be able to do this in an entertaining way which is through seeing some of my own personal interests such as traveling, cooking, and other hobbies. So below are general images for this page, images for my second travel page, and images for my third hobby page.
       </p>
       <p>
-      Why will people come to your site?
-      What questions will your visitors expect your site to answer for them?
-      What types of activities will visitors want to complete on your site?
-      What information is necessary to complete any actions your site offers?
-      Why will your visitors come to your site instead of another to get this information or complete the actions?
+        What types of activities will visitors want to complete on your site?
+        
+      </p>
+      <p>
+        What informtion is necessary to complete any actions your site offers?
+      </p>
+      <p>
+        Why will your visitors come to your site instead of another to get this information or complete the actions?
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/friendcircle.jpg" alt="me and friends" width="500" height="500">
+        <img src="images/kilby court.JPG" alt="image for homepage" width="400" height="500">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -144,8 +152,9 @@
         Travel
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="Photo from out of the country">
-        <img src="#" alt="Local Idaho Trip">
+        <img src="images/tachineputa.jpg" alt="Photo from out of the country"
+        width="400" height="500">
+        <img src="images/yellowstone.JPG" alt="Local Trip">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -153,8 +162,8 @@
         Hobbies
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="Gym picture">
-        <img src="#" alt="Picture of food I made">
+        <img src="images/gym.JPG" alt="Gym picture" width="400" height="500">
+        <img src="images/turkey.JPG" alt="Picture of food I made" width="400" height="500">
 
       </ul>
       <hr>
