--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -124,23 +124,25 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <h2>Why will peoople come to your site?</h2>
+      <h4>Why will peoople come to your site?</h4>
       <p>
         For this site, I hope that people interested learning more about who I am visit. This entails both about some interesting things about me and to also learn about some of the html and css skills that I have. 
       </p>
-      <h2>What Questions will visitors expect your site to answer for them?</h2>
+      <h4>What Questions will visitors expect your site to answer for them?</h4>
       <p>
           So as they come to my site, they will see that I am able to structure a webpage in the image that I hope for it both through HTML organization and through spacing strategies within CSS. They should hopefully be able to do this in an entertaining way which is through seeing some of my own personal interests such as traveling, cooking, and other hobbies. So below are general images for this page, images for my second travel page, and images for my third hobby page.
       </p>
+      <h4>What types of activities will visitors want to complete on your site?</h4>
       <p>
-        What types of activities will visitors want to complete on your site?
-        
+        Some things that visitors will complete on my site is seeing how easy it is to use at the forefront. The better the navigation, they can see to what extent I know what I am talking about. I'm not super sure what other activities are meant to be on this for now so I think that for now this is fine. A goal I have down the road is to continue updating the page with other things that I learned to make this feel more dynamic and have more engaging elements though.
       </p>
+      <h4>What information is necessary to complete any actions your site offers?</h4>
       <p>
-        What informtion is necessary to complete any actions your site offers?
+        For me to make sure everything is done is obviously basic html and css knowledge. As I learn more, I would like to implement other functions available that I see pop up but don't really understand what it means. After this, for anyone visiting. They would need to know why they are coming here, whether it is to learn about me or my skills. If they are interested in learning about my abilities with html and css they would need to know how to code it.
       </p>
+      <h4>Why will your visitors come to your site instead of another to get this information or complete the actions?</h4>
       <p>
-        Why will your visitors come to your site instead of another to get this information or complete the actions?
+        This site is mostly about my own experiences with a bit of informative pieces mixed in. I am hoping that people come here to see that I have a strong grasp on code and also see that I have interesting hobbies that would make me seem like a personable person who is fun to be around.
       </p>
       <p>Images for the Home page</p>
         <img src="images/friendcircle.jpg" alt="me and friends" width="500" height="500">
