six hundered words bruh

--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/CJW.png" alt="Logo image">
+      <img src="images/CJW.png" alt="Logo image" width="500" height="500">
       <hr>
       <h2>
         Style Guide
@@ -124,9 +124,9 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <h4>Why will peoople come to your site?</h4>
+      <h4>Why will people come to your site?</h4>
       <p>
-        For this site, I hope that people interested learning more about who I am visit. This entails both about some interesting things about me and to also learn about some of the html and css skills that I have. 
+        For this site, I hope that people interested learning more about who I am visit. This entails both about some interesting things about me and to also learn about some of the html and css skills that I have. The interesting things about me can help people understand the type of person I am and make it more enjoyable to look through the website while checking my skills.
       </p>
       <h4>What Questions will visitors expect your site to answer for them?</h4>
       <p>
@@ -143,6 +143,10 @@
       <h4>Why will your visitors come to your site instead of another to get this information or complete the actions?</h4>
       <p>
         This site is mostly about my own experiences with a bit of informative pieces mixed in. I am hoping that people come here to see that I have a strong grasp on code and also see that I have interesting hobbies that would make me seem like a personable person who is fun to be around.
+      </p>
+      <h4>Other thoughts</h4>
+      <p>
+        I hope that I can always come back to these pages either to see how I did something previously or to see how far I have come. At first, I took this class to just understand what I was looking at when I inspected the code of a webpage. I am obviously still learning how to do some of this without looking at my notes and older code, but I feel a lot more confident to see where errors might start arising on other projects that I might have in the future. Like on the assignment before typing this out, I was supposed to just make a wire frame but I misunderstood the instructions and had actually started coding the bare bones of what I wanted to put in the wireframe. Then I later realized the misunderstanding I had and even with this assignment chain for the personal site, I was able to understand where things were going and how to format the size of pictures and how the different headings worked for all of this. Even though I feel as if I have progressed a lot, I am excited to hopefully be a lot better at this down the road and then look back at this point to see how far I have come.
       </p>
       <p>Images for the Home page</p>
         <img src="images/friendcircle.jpg" alt="me and friends" width="500" height="500">
