--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -153,21 +153,30 @@
         <img src="images/kilby court.JPG" alt="image for homepage" width="400" height="500">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Travel</h3>
       <p>
-        Travel
+        In the page, I plan on going over some places I have visited. There might be an additional image in the future but to start the first picture is in Goshogawara, Japan. They have this special summer festival called tachineputa festival where they make these huge paper mache floats the parade around the city.
       </p>
-      <p>Images for the Page 2</p>
+      <p>
+        The next image is a picture I took at Yellowstone national park. I would talk about my experience visiting, I had visited when I was younger once so I think comparing my experiences would be something interesting to include in this section. 
+      </p>
+      <p>Images for the Travel Page</p>
         <img src="images/tachineputa.jpg" alt="Photo from out of the country"
         width="400" height="500">
         <img src="images/yellowstone.JPG" alt="Local Trip">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Hobbies</h3>
       <p>
-        Hobbies
+        While showing my html and css skills, I want to also share some things that I am interested in and have made parts of my life. The main two examples I chose to share were about going to the gym and exercising and then also cooking. 
       </p>
-      <p>Images for the Page 3</p>
+      <p>
+        The first picture is of me at the gym. Most my life I have been pretty on and off for the gym, but over the course of the last year, I have made it a goal of mine to go to the gym 6 days a week. I feel really proud of the accomplishment and I think it has been a very productive hobby of mine.
+      </p>
+      <p>
+        The second picture showcases something I had cooked. Each semester I try to cook something new and exciting and that dish was something I had made about a year ago from Today, March 9 2024. Some other dishes I made were "insert dishes here". My inspiration for each one was...
+      </p>
+      <p>Images for the Hobbies page</p>
         <img src="images/gym.JPG" alt="Gym picture" width="400" height="500">
         <img src="images/turkey.JPG" alt="Picture of food I made" width="400" height="500">
 
@@ -185,13 +194,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Travel</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Hobbies</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
