--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -190,21 +190,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        This page will describe what the website is about. Then at the bottom it will preview the other pages with links sending them that direction.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homeframe.jpg" alt="home page wireframe">
 
       <h3>Travel</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This features my travel experiences both local and further away. What I thought about those experiences. I wanted to also have a section dedicated to the fact that there might be content coming in the future to look forward too toward the bottom of the page.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/travelframe.jpg" alt="page 2 wireframe">
 
       <h3>Hobbies</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This is the next page on the site. Because hobbies can vary and there can be updates on the same one, I want a section in the beginning kind of explaining that as well.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/hobbyframe.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
