--- a/isme/hobbies.html
+++ b/isme/hobbies.html
@@ -21,6 +21,26 @@
             </nav>
         </header>
 
+        <main class="home-grid">
+            <section class="Tachineputa">
+                <img class="card-img" src="images/gym.JPG" alt="Corstian at Gym"
+                height="300px" width="300px">
+                <h2>Exercise</h2>
+                <p>
+                    One of my hobbies/interests is exercising, currently it is mostly just lifting though. Throughout my life, I had participated in a variety of sports. The amount of strength training varied per sport, but I remembered enjoying going to the gym to lift some weights. After highschool, I feel like I stopped working out as much but that time was eventually filled with other hobbies and interests of mine. But over the past year and a half, I found myself feeling sluggish and from that, a desire to work out again began to form once more. The beginning was a slow start, but soon I started to go to the gym with a few friends of mine and we were able to make the gym a part of our daily routine.
+                </p>
+                <p>So over the course of just over a year, I have been able to make it to the gym almost every day. I feel like doing this has benefitted multiple aspects of my life. The things I have noticed the most are that I have more daily energy, feel more committed to other goals, strengthen my relationships, boost in my own personal self image.</p>
+            </section>
+
+            <section class="Yellowstone">
+                <img class="card-img" src="images/turkey.JPG" alt="Turkey"
+                height="300px" width="300px">
+                <h2>Cooking</h2>
+                <p>
+                    Another hobby of mine is cooking. Growing up, I didn't cook often, but my parents enjoyed a wide variety of foods which helped expose me to many flavors. But I'd say my cooking journey didn't really start until after graudating high school. 
+                </p>
+            </section>
+         </main>
 
 
 
