--- a/isme/travel.html
+++ b/isme/travel.html
@@ -20,8 +20,36 @@
                 <a href="site-plan.html">Site Plan</a>
             </nav>
         </header>
+        <main class="home-grid">
+            <section class="Tachineputa">
+                <img class="card-img" src="images/tachineputa.jpg" alt="Aomori Tachineputa"
+                height="300px" width="300px">
+                <h2>Tachineputa</h2>
+                <p>
+                    This first picture is in Goshogawara, Japan. They have this special summer festival called tachineputa festival where they make these huge paper mache floats the parade around the city.
+                </p>
+                <p>
+                    Unfortuneatly I wasn't around during the time of the official festival but many of my friends had the opportunity to witness it which was really cool to hear about. I was lucky enough to visit a few museums that held these huge floats though. In a different city though, I was able to experience a Japanese Summer festival which is something I might cover on another day.
+                </p>
+            </section>
 
+            <section class="Yellowstone">
+                <img class="card-img" src="images/yellowstone.JPG" alt="Picture at yellowstone"
+                height="300px" width="300px">
+                <h2>Yellowstone National Park</h2>
+                <p>
+                    This picture comes from a time I recently was able to visit Yellowstone National Park. For the past few years I had wanted to visit the park, but due to tough schedules, I wasn't able to make it early enough to camp there. 
+                </p>
+                <p>
+                    When I was younger, I had visited once with my family and while I don't remember too much of what we did, I have a small collection of pictures of the experience that I thought were pretty cool. Amongst the things I remember were that we saw some cool wildlife, there was a bear high up in the mountains, we saw old faithful, and we hiked a few of the trails there.
+                </p>
+            </section>
+            <section class="Filler_Image">
+                <h2>Whats next?</h2>
+                <p>This is a section in hopes that I am able to continue going on trips in the future. By including this section it sort of tells me that the journeys are not over and that there will always be things in the future to look forward to.</p>
+            </section>
 
+         </main>
 
 
     <footer>
