--- a/isme/index.html
+++ b/isme/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corstian's Website | Learn about Corstian | Home</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -26,7 +26,10 @@
             <img class="card-img" src="images/friendcircle.jpg" alt="friends standing in a circle"
             height="300px" width="300px">
             <h2>Me and Friends</h2>
-            <h4>Why will people come to your site?</h4>
+            
+    </section>
+    <section class="friendtext">
+      <h4>Why will people come to your site?</h4>
       <p>
         For this site, I hope that people interested learning more about who I am visit. This entails both about some interesting things about me and to also learn about some of the html and css skills that I have. The interesting things about me can help people understand the type of person I am and make it more enjoyable to look through the website while checking my skills.
       </p>
@@ -34,27 +37,32 @@
       <p>
           So as they come to my site, they will see that I am able to structure a webpage in the image that I hope for it both through HTML organization and through spacing strategies within CSS. They should hopefully be able to do this in an entertaining way which is through seeing some of my own personal interests such as traveling, cooking, and other hobbies. So below are general images for this page, images for my second travel page, and images for my third hobby page.
       </p>
-      <h4>What types of activities will visitors want to complete on your site?</h4>
+      <!-- <h4>What types of activities will visitors want to complete on your site?</h4>
       <p>
         Some things that visitors will complete on my site is seeing how easy it is to use at the forefront. The better the navigation, they can see to what extent I know what I am talking about. I'm not super sure what other activities are meant to be on this for now so I think that for now this is fine. A goal I have down the road is to continue updating the page with other things that I learned to make this feel more dynamic and have more engaging elements though.
       </p>
       <h4>What information is necessary to complete any actions your site offers?</h4>
       <p>
         For me to make sure everything is done is obviously basic html and css knowledge. As I learn more, I would like to implement other functions available that I see pop up but don't really understand what it means. After this, for anyone visiting. They would need to know why they are coming here, whether it is to learn about me or my skills. If they are interested in learning about my abilities with html and css they would need to know how to code it.
-      </p>
-      <h4>Why will your visitors come to your site instead of another to get this information or complete the actions?</h4>
+      </p> -->
+      <!-- <h4>Why will your visitors come to your site instead of another to get this information or complete the actions?</h4>
       <p>
         This site is mostly about my own experiences with a bit of informative pieces mixed in. I am hoping that people come here to see that I have a strong grasp on code and also see that I have interesting hobbies that would make me seem like a personable person who is fun to be around.
-      </p>
+      </p> -->
     </section>
     <section class="kilbycourt">
         <img class="card-img" src="images/kilby court.JPG" alt="Me at kilby court"
         height="300px" width="300px">
             <h2>Kilby Court</h2>
-            <h4>Other thoughts</h4>
-            <p>
-              I hope that I can always come back to these pages either to see how I did something previously or to see how far I have come. At first, I took this class to just understand what I was looking at when I inspected the code of a webpage. I am obviously still learning how to do some of this without looking at my notes and older code, but I feel a lot more confident to see where errors might start arising on other projects that I might have in the future. Like on the assignment before typing this out, I was supposed to just make a wire frame but I misunderstood the instructions and had actually started coding the bare bones of what I wanted to put in the wireframe. Then I later realized the misunderstanding I had and even with this assignment chain for the personal site, I was able to understand where things were going and how to format the size of pictures and how the different headings worked for all of this. Even though I feel as if I have progressed a lot, I am excited to hopefully be a lot better at this down the road and then look back at this point to see how far I have come.
-            </p>
+            
+    </section>
+    <section class="kilbytext">
+      <h4>Other thoughts</h4>
+      <p>
+        I hope that I can always come back to these pages either to see how I did something previously or to see how far I have come. At first, I took this class to just understand what I was looking at when I inspected the code of a webpage. 
+        </p>
+       <p> I am obviously still learning how to do some of this without looking at my notes and older code, but I feel a lot more confident to see where errors might start arising on other projects that I might have in the future. Like on the assignment before typing this out, I was supposed to just make a wire frame but I misunderstood the instructions and had actually started coding the bare bones of what I wanted to put in the wireframe. Then I later realized the misunderstanding I had and even with this assignment chain for the personal site, I was able to understand where things were going and how to format the size of pictures and how the different headings worked for all of this. Even though I feel as if I have progressed a lot, I am excited to hopefully be a lot better at this down the road and then look back at this point to see how far I have come.
+      </p>
     </section>
 
     <section class="travel-card">
