--- a/isme/index.html
+++ b/isme/index.html
@@ -8,7 +8,19 @@
 </head>
 
 <body>
-    <div id="content">
+  <div class="topnav" id="myTopnav">
+    <a id="logo_link" href="index.html">
+      <img class="logo" src="images/CJW.png" alt="Corstian Logo" height=100px width=100px;>
+  </a>
+    <a href="index.html" class="active">Home</a>
+    <a href="travel.html">Travel</a>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="site-plan.html">Site Plan</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+    <!-- <div id="content">
         <header>
             <a id="logo_link" href="index.html">
                 <img class="logo" src="images/CJW.png" alt="Corstian Logo" height=100px width=100px;>
@@ -20,7 +32,7 @@
                 <a href="site-plan.html">Site Plan</a>
             </nav>
         </header>
-
+    </div> -->
     <main class="home-grid">
         <section class="friendcircle">
             <img class="card-img" src="images/friendcircle.jpg" alt="friends standing in a circle"
