--- a/isme/index.html
+++ b/isme/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="topnav" id="myTopnav">
     <a id="logo_link" href="index.html">
-      <img class="logo" src="images/CJW.png" alt="Corstian Logo" height=100 width=100;>
+      <img class="logo" src="images/CJW.png" alt="Corstian Logo" height=100 width=100>
   </a>
     <a href="index.html" class="active">Home</a>
     <a href="travel.html">Travel</a>
