--- a/isme/travel.html
+++ b/isme/travel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corstian's Website | Learn about Corstian | Travel</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -21,9 +21,9 @@
             </nav>
         </header>
         <main class="home-grid">
-            <section class="Tachineputa">
-                <img class="card-img" src="images/tachineputa.jpg" alt="Aomori Tachineputa"
-                height="300px" width="300px">
+            <section class="tachineputa-card">
+                <img class="card-image" src="images/tachineputa.jpg" alt="Aomori Tachineputa"
+                height="300" width="300">
                 <h2>Tachineputa</h2>
                 <p>
                     This first picture is in Goshogawara, Japan. They have this special summer festival called tachineputa festival where they make these huge paper mache floats the parade around the city.
@@ -33,9 +33,9 @@
                 </p>
             </section>
 
-            <section class="Yellowstone">
-                <img class="card-img" src="images/yellowstone.JPG" alt="Picture at yellowstone"
-                height="300px" width="300px">
+            <section class="yellowstone-card">
+                <img class="card-image" src="images/yellowstone.JPG" alt="Picture at yellowstone"
+                height="300" width="300">
                 <h2>Yellowstone National Park</h2>
                 <p>
                     This picture comes from a time I recently was able to visit Yellowstone National Park. For the past few years I had wanted to visit the park, but due to tough schedules, I wasn't able to make it early enough to camp there. 
@@ -44,7 +44,9 @@
                     When I was younger, I had visited once with my family and while I don't remember too much of what we did, I have a small collection of pictures of the experience that I thought were pretty cool. Amongst the things I remember were that we saw some cool wildlife, there was a bear high up in the mountains, we saw old faithful, and we hiked a few of the trails there.
                 </p>
             </section>
-            <section class="Filler_Image">
+            <section class="filler-image">
+                <img class="card-image" src="images/otherlocation.jpg" alt="Picture at diff location"
+                height="300" width="300">
                 <h2>Whats next?</h2>
                 <p>This is a section in hopes that I am able to continue going on trips in the future. By including this section it sort of tells me that the journeys are not over and that there will always be things in the future to look forward to.</p>
             </section>
@@ -54,7 +56,7 @@
 
     <footer>
         <a href="site-plan.html" target="_blank">
-        <img class="site-plan" src="images/travelframe.JPG" alt="homepage wireframe" height="150px" width="100px">
+        <img class="site-plan" src="images/travelframe.JPG" alt="homepage wireframe" height="150" width="100">
     </a>
     </footer>
 </body>
