--- a/isme/hobbies.html
+++ b/isme/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corstian's Website | Learn about Corstian | Hobbies</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
