--- a/isme/travel.html
+++ b/isme/travel.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/CJW.png" alt="Corstian Logo" height=100px width=100px;>
+                <img class="logo" src="images/CJW.png" alt="Corstian Logo" height=100 width=100>
             </a>
             <nav>
                 <a href="index.html">Home</a>
