--- a/isme/hobbies.html
+++ b/isme/hobbies.html
@@ -27,15 +27,15 @@
                     Welcome to my Hobbies Page!
                 </h2>
             </section>
-            <section class="hero-text">
+            <div class="hero-text">
                 <p>
                     My goal for this page is to share some of my interests. This page will work a bit different than the travel page which is more of a blog style. The plan here is to show some different things I am interested so there will likely be less updates on things that are happening.
                 </p>
-            </section>
-            <section class="gym">
+            </div>
+            <div class="gym">
                 <img class="card-img" src="images/gym.JPG" alt="Corstian at Gym"
                 height="300" width="300">
-            </section>
+            </div>
             <section class="gym-text">
                 <h2>Exercise</h2>
                 <p>
@@ -44,10 +44,10 @@
                 <p>So over the course of just over a year, I have been able to make it to the gym almost every day. I feel like doing this has benefitted multiple aspects of my life. The things I have noticed the most are that I have more daily energy, feel more committed to other goals, strengthen my relationships, boost in my own personal self image.</p>
             </section>
 
-            <section class="turkey">
+            <div class="turkey">
                 <img class="card-img" src="images/turkey.JPG" alt="Turkey"
                 height="300" width="300">
-            </section>
+            </div>
             <section class="turkey-text">
                 <h2>Cooking</h2>
                 <p>
