--- a/isme/hobbies.html
+++ b/isme/hobbies.html
@@ -55,12 +55,12 @@
                 </p>
             </section>
          </main>
-
+</div>
 
 
     <footer>
         <a href="site-plan.html" target="_blank">
         <img class="site-plan" src="images/travelframe.JPG" alt="homepage wireframe" height="150" width="100">
-    </a>
+        </a>
     </footer>
 </body>
