--- a/isme/hobbies.html
+++ b/isme/hobbies.html
@@ -59,8 +59,11 @@
 
 
     <footer>
-        <a href="site-plan.html" target="_blank">
-        <img class="site-plan" src="images/travelframe.JPG" alt="homepage wireframe" height="150" width="100">
-        </a>
+        <nav class="footer-nav">
+            <a href="site-plan.html" target="_blank">Siteplan
+              <!-- <img class="site-plan" src="images/homeframe.jpg" alt="homepage wireframe" height="150" width="100"> -->
+          </a>
+          <a href="index.html">Home Page</a>
+        </nav>
     </footer>
 </body>
