--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -192,19 +192,19 @@
       <p>         
         This page will describe what the website is about. Then at the bottom it will preview the other pages with links sending them that direction.
       </p>
-      <img src="images/homeframe.jpg" alt="home page wireframe">
+      <img src="images/homeframe.jpg" alt="home page wireframe" width="400" height="500">
 
       <h3>Travel</h3>
       <p>         
         This features my travel experiences both local and further away. What I thought about those experiences. I wanted to also have a section dedicated to the fact that there might be content coming in the future to look forward too toward the bottom of the page.
       </p>
-      <img src="images/travelframe.jpg" alt="page 2 wireframe">
+      <img src="images/travelframe.jpg" alt="page 2 wireframe" width="400" height="500">
 
       <h3>Hobbies</h3>
       <p>         
         This is the next page on the site. Because hobbies can vary and there can be updates on the same one, I want a section in the beginning kind of explaining that as well.
       </p>
-      <img src="images/hobbyframe.jpg" alt="page 3 wireframe">
+      <img src="images/hobbyframe.jpg" alt="page 3 wireframe" width="400" height="500">
     </main>
   </body>
 
