--- a/isme/site-plan.html
+++ b/isme/site-plan.html
@@ -192,7 +192,7 @@
       <p>         
         This page will describe what the website is about. Then at the bottom it will preview the other pages with links sending them that direction.
       </p>
-      <img src="images/homeframe.JPG" alt="home page wireframe" width="400" height="500">
+      <img src="images/homesframe.JPG" alt="home page wireframe" width="400" height="500">
 
       <h3>Travel</h3>
       <p>         
